Apply room sharing using websocket